<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:hint="@string/username1"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/contactNumberText"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:hint="@string/contact_number1"
        android:inputType="phone"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/submit1" />

</LinearLayout>
