<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity">

<TextView
    android:id="@+id/welcomeBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_back"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.01"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.291" />

<EditText
    android:id="@+id/username"
    android:layout_width="400dp"
    android:layout_height="48dp"
    android:hint="@string/mobile_no_email_id_user_id"
    android:inputType="text"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.01"
    app:layout_constraintTop_toBottomOf="@+id/welcomeBack"
    app:layout_constraintVertical_bias="0.046"
    tools:layout_editor_absoluteX="-16dp"
    android:autofillHints="user" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.044" />

    <CheckBox
    android:id="@+id/checkbox_terms"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onCheckboxClicked"
    android:text="@string/accept_terms_amp_conditions"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.01"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.535" />

<Button
    android:id="@+id/login_button"
    android:layout_width="315dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:text="@string/login"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.606" />

<TextView
    android:id="@+id/or"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginStart="180dp"
    android:layout_marginTop="3dp"
    android:autofillHints="OR"
    android:ems="10"
    android:text="@string/or"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_button"
     />

<Button
    android:id="@+id/otpbutton"
    android:layout_width="315dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:text="@string/login_with_otp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.746" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account_createaccount"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/linkcolor"
        android:autoLink="all"
        android:linksClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />


<TextView
    android:id="@+id/forgotPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.884" />

</androidx.constraintlayout.widget.ConstraintLayout>
