<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/residential_address"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:autofillHints="postalAddress"
        android:hint="@string/residential_address"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="1"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/permanent_address"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="64dp"
        android:autofillHints="postalAddress"
        android:hint="@string/permanent_address"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="1"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/city"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="name"
        android:hint="@string/city"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <!--    <ImageView-->
<!--        android:id="@+id/aadhar_image_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:contentDescription="Aadhar Image"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <EditText
        android:id="@+id/state"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="name"
        android:hint="@string/state"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/aadhar_number_edit_text"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="456dp"

        android:autofillHints="aadharcardnumber"
        android:hint="@string/enter_your_aadhar_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/upload_aadhar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="320dp"
        android:text="@string/upload_aadhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aadhar_number_edit_text"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/pancard_number_edit_text"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"

        android:layout_marginTop="1dp"
        android:layout_marginBottom="356dp"
        android:hint="@string/enter_your_pancard_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

<!--    <ImageView-->
<!--        android:id="@+id/pancard_image_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:contentDescription="Pancard Image"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/upload_pancard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_pancard"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pancard_number_edit_text" />

<!--    <ImageView-->
<!--        android:id="@+id/certificate_image_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:contentDescription="Certificate Image"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/upload_certificate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="26dp"
        android:text="@string/upload_education_certificate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pancard_number_edit_text"
        app:layout_constraintVertical_bias="0.177" />
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>
